# nhl-degrees-of-separation

./: LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  test_neo4j.py
backend/app/: main.py
backend/app/api/routes/: health_check.py  image_proxy.py  players.py
backend/app/core/: config.py  neo4j.py
backend/app/db/repositories/: health_check_repo.py  players_repo.py
backend/app/services/: health_check_service.py  image_proxy.py  players_service.py
backend/scripts/: entrypoint.sh
backend/scripts/bash/: entrypoint.sh  keep-active.sh
backend/scripts/python/: create_rosters.py  create_team_seasons.py  create_teams.py  migrate_players_to_prod.py  test_neo4j.py
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: nhlAPI.ts
frontend/src/components/: Footer.tsx  PlayerSearchBar.tsx  PlayerSearchHeader.css  PlayerSearchHeader.tsx  RandomPlayersButton.tsx  ShortestPathGraph.tsx
frontend/src/constants/: teamColors.ts
frontend/src/styles/: global.css
frontend/src/types/: nhl.ts
