[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Evan Boyd <evan.boyd@mail.mcgill.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.123.10"
uvicorn = "^0.38.0"
neo4j = "^6.0.3"
python-dotenv = "^1.2.1"
httpx = "^0.28.1"
pydantic-settings = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
